html and CSS files are changes

--- a/html/book.html
+++ b/html/book.html
@@ -9,7 +9,7 @@
     <body>
 
         <section class = "ban">
-            <h2>BOOK YOUR TABLE NOW</h2>
+            <h2>BOOK YOUR TABLE </h2>
             <div class = "card">
                 <div class = "image">
             
