--- a/html/contact.html
+++ b/html/contact.html
@@ -22,7 +22,7 @@
 						<div class="icon"><i class="fas fa-map-marker-alt"></i></div>
 						<div class="text"> 
 							<h3><b>Address</b></h3>
-							<p> Melsanthy Kany Beach,<br> Agalawatta streat, <br>Moragolla,<br> Thalathuoya Kandy,<br> Sri Lanka.</p>
+							<p> Melsanthy Kany ,<br> Agalawatta streat, <br>Moragolla,<br> Thalathuoya Kandy,<br> Sri Lanka.</p>
 						</div>
 					</div>
 					<div class="box">
