--- a/html/menu1.html
+++ b/html/menu1.html
@@ -8,7 +8,7 @@
 
 <div class="toper">
         <div class="head">
-            <h4><span>OUR MENU </span>Our delightful, mouthwatering food will haunt your dreams and live in your memories forever</h4>
+            <h4><span>MENU </span>Our delightful, mouthwatering food will haunt your dreams and live in your memories forever</h4>
         </div>
         <div class="menu">
             <div class="single">
