--- a/html/gellary.html
+++ b/html/gellary.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gallery</title>
+<title>Gallery view</title>
 <link rel="stylesheet" type="text/css" href="../style/gellary.css">
 </head>
 <body>
