--- a/html/home.html
+++ b/html/home.html
@@ -20,8 +20,8 @@
 			</div>
 			<div class="l">
 				<ul class="list">
-					<li> <a href="login.html"> Log in </a> <i class="fas fa-angle-down"></i></li>
-					<li> <a href="signin.html"> Sign in</a> <i class="fas fa-angle-down"></i></li>
+					<li> <a href="login.html"> Login </a> <i class="fas fa-angle-down"></i></li>
+					<li> <a href="signin.html"> Signin</a> <i class="fas fa-angle-down"></i></li>
 					<li>Orders <i class="fas fa-shopping-cart"></i> </li>
 					</ul>
 					
@@ -46,7 +46,7 @@
 					<h1> <b> Hotel DELUXE </b> </h1> <br>
 					<h4>Welcome to the Hotel Deluxe. We are pleased to bring you the first quality meals made from locally sourced and organic produce. We take great pride in our recipes and are sure you'll love them too.</h4>
 					<form action="home.html">
-						<button> <b> <a href="book.html"> Book Now</a> </b></button>
+						<button> <b> <a href="book.html"> Book</a> </b></button>
 					</form>
 					
 
